added firebase config

--- a/Website/GhostNWhatever/game.html
+++ b/Website/GhostNWhatever/game.html
@@ -40,8 +40,19 @@
         </div>
 </div>
 
-
-<script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyB0apCFC3WRnF75Azql9EEvT4qEHBC6gVM",
+    authDomain: "ghostsandwhatever.firebaseapp.com",
+    databaseURL: "https://ghostsandwhatever.firebaseio.com",
+    projectId: "ghostsandwhatever",
+    storageBucket: "ghostsandwhatever.appspot.com",
+    messagingSenderId: "914678984501"
+  };
+  firebase.initializeApp(config);
+</script>
 
  </body>
 </html>
