added class generation and point update functionality

--- a/Website/GhostNWhatever/index.html
+++ b/Website/GhostNWhatever/index.html
@@ -7,9 +7,13 @@
 <body>
 
 <h1>Ghost 'n' Whatever</h1>
+
+<h3>Games:</h3>
 <ul id="games">
 
 </ul>
+
+<button onclick="createGame()">Create Game</button>
 
 <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
 <script src="index1.js"></script>
