--- a/Website/GhostNWhatever/game.html
+++ b/Website/GhostNWhatever/game.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <title>Ghost 'n' Whatever</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
 </head>
 <body>
 <div class="container">
-    <div class="row">
-        <div class="col-xs-8">
             <h1>Game Overview</h1>
-        </div>
-        <div class="col-xs-4">
+    <div class="game-lobby">
             <h4>Game lobby: <span id="lobby">XYZ</span></h4>
-        </div>
     </div>
 
-    <div class="col">
-        <h3>Time left: <span id="timeleft">10.00</span></h3>
+    <div class="timer" id="timer">
+        <h4>Game length:</h4>
+        <select name="time" id="game-length">
+            <option value="1">1 minute</option>
+            <option value="5">5 minutes</option>
+            <option value="10">10 minutes</option>
+            <option value="15">15 minutes</option>
+        </select>
+        <button onclick="startGame()">Start Game</button>
     </div>
 
-        <div>
-            <h2>Players:</h2>
-            <ol id="players">
-            </ol>
-        </div>
+    <div>
+        <h2>Players:</h2>
+        <ol id="players">
+        </ol>
+    </div>
 
 </div>
 
